@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920409
+MANIFEST for ded, version t19920410
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
